@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/Attic/ExtUtils-CBuilder-0.23.ebuild,v 1.2 2008/11/04 09:46:26 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/Attic/ExtUtils-CBuilder-0.23.ebuild,v 1.3 2009/07/07 02:14:28 jer Exp $
 
 MODULE_AUTHOR=KWILLIAMS
 
@@ -10,7 +10,7 @@ DESCRIPTION="Compile and link C code for Perl modules"
 
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
-KEYWORDS="alpha ~amd64 arm ~hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh sparc ~sparc-fbsd x86 ~x86-fbsd"
+KEYWORDS="alpha ~amd64 arm hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd"
 IUSE=""
 
 RDEPEND="dev-lang/perl"
