@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/ExtUtils-CBuilder
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.6 2009/07/05 12:34:04 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.7 2009/07/07 02:14:28 jer Exp $
+
+  07 Jul 2009; Jeroen Roovers <jer@gentoo.org>
+  ExtUtils-CBuilder-0.23.ebuild:
+  Stable for HPPA too.
 
 *ExtUtils-CBuilder-0.26.02 (05 Jul 2009)
 
